Demos and Notes

--- a/LINQDemoConsolAppDemo/LINQDemoConsolAppDemo.csproj
+++ b/LINQDemoConsolAppDemo/LINQDemoConsolAppDemo.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>LINQDemoConsolAppDemo.GroupedDemo</StartupObject>
+    <StartupObject>LINQDemoConsolAppDemo.Program</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
